# cef

./: .gitignore  LICENSE  README.md  SDK-DESIGN.md
.github/workflows/: ci.yml
demo/: cef-pq.js  cef-sdk.js  cef-timestamp.js
docs/: CNAME  cef-cert.js  cef-sdk.js  index.html
sdk/go/: README.md  go.mod  go.sum
sdk/go/cmd/cef/: main.go
sdk/go/format/container/: container.go  container_test.go
sdk/go/format/cose/: cose.go  cose_edge_test.go  cose_test.go  cose_vectors_test.go
sdk/go/format/crypto/: crypto.go  crypto_test.go
sdk/go/goodkey/cert/: cert.go  cert_test.go
sdk/go/goodkey/exchange/: decrypt.go  encrypt.go  exchange_test.go  helpers.go  pq_helpers.go  types.go  verify.go
sdk/go/goodkey/ipc/: client.go  mock_client.go  recipient.go  types.go
sdk/python/: README.md  cef_interop.py  pyproject.toml
sdk/python/cef/: __init__.py  container.py  cose.py  crypto.py  pq.py
sdk/python/tests/: test_cef.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: error.rs  lib.rs
sdk/rust/src/format/: container.rs  cose.rs  crypto.rs  mod.rs  pq.rs
sdk/typescript/: README.md  build-demo.mjs  package-lock.json  package.json  tsconfig.json  typedoc.json
sdk/typescript/src/: cef.ts  demo-bundle.ts  index.ts
sdk/typescript/src/format/: container.ts  cose.ts  crypto.ts  exchange.ts  index.ts  pq.ts
sdk/typescript/src/timestamp/: index.ts  timestamp.ts
sdk/typescript/test/: cef.test.ts
spec/: COMPARISON.md  IMPLEMENTING-A-BACKEND.md  SECURITY.md  SPECIFICATION.md  manifest.cddl
spec/test-vectors/: TEST-VECTORS.md
test/: interop.mjs
(+2 files in other folders)
