[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cef"
version = "0.1.0"
description = "CEF: COSE Encrypted Files — post-quantum secure file exchange format"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
    "pqcrypto>=0.4",
    "cryptography>=42",
    "cbor2>=5.6",
]

[project.optional-dependencies]
test = ["pytest>=8"]
